> Renamed "enlarged" to "cartoon"
> Removed distance slider in second tab
> Made one mass red in the first tab
> Made the sun yellow
# 0.01.10 (33289) Jul 13, 2009
> added a missing translation string
# 0.01.09 (33287) Jul 13, 2009
> Custom checkbox becomes disabled when it's not selectable
> Fixed: The two sliders are off set from each other.  Both should be centered.
> Fixed: There should be a divider or box for the sliders
> Put Earth/Custom radio buttons at the top.
> Fixed: When I switch between kilometers and light minutes the control panel shifts over. 
> Added a pic of the Earth next to the earth radio button.
> Fixed: Control panel Radio buttons should be aligned left.
> Fixed: The control panel boxes should expand to the width of the control panel.
> Removed the dialog box that explains the units.
> Added reset all button
> Ruler is always enabled in the Sun-Planet tab
# 0.01.08 (33237) Jul 11, 2009
> Increased font for text boxes
# 0.01.07 (33235) Jul 11, 2009
> Improved control panel text to indicate enlargement is per object, not for entire scale
> Increased font size on ruler
# 0.01.06 (33216) Jul 10, 2009
> Fixed: Planet size should be a function of mass
> reduced the range of the distance slider in the 2nd tab
# 0.01.05 (33213) Jul 10, 2009
> made the slider drag the sun instead of the planet
> added units controls and explanation
> added a link to My Solar System sim
> added scale control for magnified or actual size
# 0.01.04 (33175) Jul 8, 2009
> constrained drag to lie within play area
> added control panel to sun planet module
# 0.01.03 (33142) Jul 8, 2009
# 0.01.03 (33132) Jul 8, 2009
> added whitespace every 3 digits after the decimal place
> internationalized
> renamed cavendish-experiment to force-law-lab
# 0.01.02 (33086) Jul 6, 2009
> Use a space character to separate thousands for sun-planet system
> Increased font size for scale disclaimer on second panel
> Increased and bolded the ruler font, particularly for units