@@ -1,5 +1,5 @@
-force-law-lab.name         =Force Law Lab
-force-law-lab.description  =Visualize the force of objects on one another, and see how it relates to the distance between them.
+gravity-force-lab.name         =Gravity Force Lab
+gravity-force-lab.description  =Visualize the force of objects on one another, and see how it relates to the distance between them.
 
 force-description-pattern-target_source_value=Force on {0} by {1} = {2} N
 readout.pattern-bodyname={0} mass
