@@ -2,4 +2,4 @@ project.depends.data=data
 project.depends.scala.source=scala-src
 project.depends.lib=phetcommon : piccolo-phet : scala-common
 
-project.flavor.force-law-lab.mainclass=edu.colorado.phet.forcelawlab.ForceLawLabApplicationMain
+project.flavor.gravity-force-lab.mainclass=edu.colorado.phet.forcelawlab.GravityForceLabApplicationMain
